test: 생성된 난수가 올바른 범위인지 테스트하는 함수 생성